# robotcup2026-robot-description

./: CMakeLists.txt  package.xml
config/ros2_controller/: my_controllers.yaml
launch/: robot_preview_rviz.launch.py  robot_state_publisher.launch.py
meshes/walkie/: base_link_collision.stl  roller_simplify.stl  roller_simplify_x.stl  roller_simplify_y.stl  roller_simplify_z.stl
robots/: gz_walkie.urdf.xacro
urdf/walkie/: ros2_control.xacro
urdf/walkie/base/: base.urdf.xacro
urdf/walkie/omni_wheel/: gz_omni_wheel.urdf.xacro  omni_wheel.urdf.xacro
urdf/walkie/roller/: gz_roller.urdf.xacro  roller.gazebo.xacro  roller.urdf.xacro
