<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walkie_description</name>
  <version>0.0.1</version>
  <description>The rosbot_description package</description>
  <maintainer email="sutigran2557@gmail.com">Armmy2530</maintainer>
  <license>Apache License 2.0</license>
  <!-- <url type="website">https://husarion.com/</url> -->
  <!-- <url type="repository">https://github.com/husarion/rosbot_ros</url> -->
  <!-- <url type="bugtracker">https://github.com/husarion/rosbot_ros/issues</url> -->
  <author email="sutigran2557@gmail.com">Armmy2530</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>xacro</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
